--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   flask_task:
-    build: ./Task_Tracker-Flask_App/
+    build: ./ #Where Docker file is
     container_name: flask-task
     ports:
       - '5000:5000'
