--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-S_K=5791628bb0b13ce0c676dfde280ba245
-EMAIL_USER=devlog-tests
-EMAIL_PASS=qywabcrbnliwpuvq
-DB_URL=postgresql://postgres:asdasdasd@pg_db:5432/flask_task
-TEST_DB_URL=postgresql://postgres:asdasdasd@pg_db:5432/flask_test
+S_K=your_secret_key
+EMAIL_USER=email_user
+EMAIL_PASS=email_password
+DB_URL=postgresql://pg_user:pg_password@pg_db:5432/flask_task
+TEST_DB_URL=postgresql://test_pg_user:test_pg_password@pg_db:5432/flask_test
